--- a/ggd-recipes/hg38/ACMG56_genes.yaml
+++ b/ggd-recipes/hg38/ACMG56_genes.yaml
@@ -1,5 +1,5 @@
 # ACMG regions: http://iobio.io/2016/03/29/acmg56/
-# https://github.com/lpantano/custom_genome_annotation
+# http://github.com/lpantano/custom_genome_annotation
 ---
 attributes:
   name: ACMG56_genes
@@ -9,7 +9,7 @@ recipe:
     recipe_type: bash
     recipe_cmds:
       - |
-        baseurl=https://raw.githubusercontent.com/lpantano/custom_genome_annotation/master/acmg56.hg38.bed
+        baseurl=http://raw.githubusercontent.com/lpantano/custom_genome_annotation/master/acmg56.hg38.bed
         dir=coverage/prioritize/actionable
         mkdir -p $dir
         cd $dir
